Establish links to conemu.ru

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,15 @@
       <div class="h-desc">{% if site.url != 'local' %}<a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/">{{ page.site_label }}</a>{% else %}<span id="media-width"></span><span id="media-orient"></span>{% endif %}</div>
     </div>
     <div class="h-social">
-      <a class="h-twitter" href="https://twitter.com/intent/tweet?text=ConEmu%3A%20Handy%20Windows%20terminal&url=http%3A%2F%2Fconemu.github.io" target="_blank" title="Share ConEmu on Twitter"></a>
-      <a class="h-facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fconemu.github.io" target="_blank" title="Share ConEmu on FaceBook"></a>
-      <a class="h-gplus" href="https://plus.google.com/share?url=http%3A%2F%2Fconemu.github.io" target="_blank" title="Share ConEmu on Google+"></a>
+      <a class="h-twitter" target="_blank"
+        href="https://twitter.com/intent/tweet?text={{ site.twit_text }}&url=http%3A%2F%2F{{ site.site_name }}"
+        title="Share ConEmu on Twitter"></a>
+      <a class="h-facebook" target="_blank"
+        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2F{{ site.site_name }}"
+        title="Share ConEmu on FaceBook"></a>
+      <a class="h-gplus" target="_blank"
+        href="https://plus.google.com/share?url=http%3A%2F%2F{{ site.site_name }}"
+        title="Share ConEmu on Google+"></a>
     </div>
   </div>
   <div id="header-google">
