--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -8,7 +8,7 @@ as one customizable GUI window with various features. </p>
 
 <p>Initially, the program was created as a companion to <a href="http://www.farmanager.com/download.php?l=en" rel="nofollow">Far Manager</a> (<a href="http://en.wikipedia.org/wiki/FAR_Manager" rel="nofollow">FAR in Wikipedia</a>), my favorite shell replacement - file and archive management, command history and completion, powerful editor. </p>
 
-<p>Today, ConEmu can be used with any other console application or simple GUI tools (like PuTTY for example). ConEmu is an active project, open to <a href="{{page.docfolder}}/Issues.html">suggestions</a>. </p>
+<p>Today, ConEmu can be used with any other console application or simple GUI tools (like PuTTY for example). ConEmu is an active project, open to <a href="{{ site.mirror }}{{ page.docfolder }}/Issues.html">suggestions</a>. </p>
 
 <p><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="/img/Downloads.png" alt="Download ConEmu" title="Download ConEmu"></img></a></p>
 
@@ -16,15 +16,15 @@ as one customizable GUI window with various features. </p>
 
 <p><img alt="ConEmu screenshot" src="/img/ConEmu-Maximus5.png"></p>
 
-<p><a href="{{page.docfolder}}/Awards.html">Votes and awards</a> (vote for <a href="{{page.docfolder}}/Awards.html#Please,_vote_for_ConEmu">ConEmu</a>, if you please). </p>
+<p><a href="{{ site.mirror }}{{ page.docfolder }}/Awards.html">Votes and awards</a> (vote for <a href="{{ site.mirror }}{{ page.docfolder }}/Awards.html#Please,_vote_for_ConEmu">ConEmu</a>, if you please). </p>
 
 
 <h2 id="Disclaimer"> Disclaimer </h2>
 
 <p>ConEmu is not a shell, so it does not provide &quot;shell features&quot; like tab-completion, command history and others.
 ConEmu is advanced console window where you can run any shell of your choice.
-However, some of these features placed in <a href="{{page.docfolder}}/RoadMap.html">RoadMap</a>.
-Also you may try <a href="{{page.docfolder}}/ConEmuClink.html">Clink</a> for bash-style completion in cmd.exe
+However, some of these features placed in <a href="{{ site.mirror }}{{ page.docfolder }}/RoadMap.html">RoadMap</a>.
+Also you may try <a href="{{ site.mirror }}{{ page.docfolder }}/ConEmuClink.html">Clink</a> for bash-style completion in cmd.exe
 and <a href="http://github.com/lzybkr/PSReadLine">PSReadLine</a>
 or <a href="http://powertab.codeplex.com/">PowerTab</a> in powershell.exe. </p>
 
@@ -42,12 +42,12 @@ and others. </p>
 
 
 <h2 id="Links"> Documentation and links </h2>
-<ul><li><a href="{{page.docfolder}}/TableOfContents.html">Table of contents</a></li>
-	<li><a href="{{page.docfolder}}/Whats_New.html">What&#x27;s new</a></li>
-	<li><a href="{{page.docfolder}}/ConEmuFAQ.html">FAQ</a></li>
-	<li><a href="{{page.docfolder}}/Screenshots.html">Screenshots</a></li>
-	<li><a href="{{page.docfolder}}/Screencasts.html">Video</a></li>
-	<li><a href="{{page.docfolder}}/Reviews.html">Reviews</a></li>
+<ul><li><a href="{{ site.mirror }}{{ page.docfolder }}/TableOfContents.html">Table of contents</a></li>
+	<li><a href="{{ site.mirror }}{{ page.docfolder }}/Whats_New.html">What&#x27;s new</a></li>
+	<li><a href="{{ site.mirror }}{{ page.docfolder }}/ConEmuFAQ.html">FAQ</a></li>
+	<li><a href="{{ site.mirror }}{{ page.docfolder }}/Screenshots.html">Screenshots</a></li>
+	<li><a href="{{ site.mirror }}{{ page.docfolder }}/Screencasts.html">Video</a></li>
+	<li><a href="{{ site.mirror }}{{ page.docfolder }}/Reviews.html">Reviews</a></li>
 </ul>
 
 
@@ -57,9 +57,9 @@ and others. </p>
 
 <ul><li>smooth and friendly window resizing; </li>
 	<li>tabs for editors, viewers, panels and consoles; </li>
-	<li>run simple <a href="{{page.docfolder}}/ChildGui.html">GUI apps</a> like PuTTY in tabs; </li>
-	<li>Windows 7 <a href="{{page.docfolder}}/Windows7Taskbar.html#Customizable_Jump_list">Jump Lists</a> and <a href="{{page.docfolder}}/Progress.html">Progress</a> on Taskbar buttons; </li>
-	<li>easily run old <a href="{{page.docfolder}}/DosBox.html">DOS applications</a> (games) in Windows 7 or 64-bit OS; </li>
+	<li>run simple <a href="{{ site.mirror }}{{ page.docfolder }}/ChildGui.html">GUI apps</a> like PuTTY in tabs; </li>
+	<li>Windows 7 <a href="{{ site.mirror }}{{ page.docfolder }}/Windows7Taskbar.html#Customizable_Jump_list">Jump Lists</a> and <a href="{{ site.mirror }}{{ page.docfolder }}/Progress.html">Progress</a> on Taskbar buttons; </li>
+	<li>easily run old <a href="{{ site.mirror }}{{ page.docfolder }}/DosBox.html">DOS applications</a> (games) in Windows 7 or 64-bit OS; </li>
 	<li>thumbnails and tiles in Far Manager; </li>
 	<li>normal, maximized and full screen graphical window modes; </li>
 	<li>window font anti-aliasing: standard, ClearType, disabled; </li>
@@ -67,7 +67,7 @@ and others. </p>
 	<li>Chinese verions of Windows supported; </li>
 	<li>using <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=153" rel="nofollow">normal/bold/italic</a> fonts for different parts of the console simultaneously; </li>
 	<li>using 24-bit colors in Far Manager 3.x; </li>
-	<li><a href="{{page.docfolder}}/AnsiEscapeCodes.html">ANSI X3.64 and Xterm 256 colors</a>; </li>
+	<li><a href="{{ site.mirror }}{{ page.docfolder }}/AnsiEscapeCodes.html">ANSI X3.64 and Xterm 256 colors</a>; </li>
 	<li>cursor: standard console (horizontal) or GUI (vertical); </li>
 	<li>optional per-application settings (e.g. palette); </li>
 	<li>vertical console buffer scrolling using the keyboard (BufferHeight mode); </li>
@@ -79,10 +79,10 @@ and others. </p>
 	<li>transparency and desktop mode; </li>
 	<li>customizable starting tabs; </li>
 	<li>configurable and clickable status bar; </li>
-	<li>and more, and more... take a look at <a href="{{page.docfolder}}/TableOfContents.html">Documentation</a>, <a href="{{page.docfolder}}/Settings.html">Settings pages</a> and <a href="{{page.docfolder}}/Whats_New.html">What's New</a>. </li>
+	<li>and more, and more... take a look at <a href="{{ site.mirror }}{{ page.docfolder }}/TableOfContents.html">Documentation</a>, <a href="{{ site.mirror }}{{ page.docfolder }}/Settings.html">Settings pages</a> and <a href="{{ site.mirror }}{{ page.docfolder }}/Whats_New.html">What's New</a>. </li>
 </ul>
 
-<p>All settings are read from the registry or <a href="{{page.docfolder}}/Settings.html#ConEmu_.xml">ConEmu.xml</a> file (multiple named configurations are supported),
+<p>All settings are read from the registry or <a href="{{ site.mirror }}{{ page.docfolder }}/Settings.html#ConEmu_.xml">ConEmu.xml</a> file (multiple named configurations are supported),
 after which the command line parameters are applied. Parameters /Config and /BufferHeight can only be specified on the command line.
 Most settings are configured using the Settings dialog, not from the command line. </p>
 
@@ -97,4 +97,4 @@ Most settings are configured using the Settings dialog, not from the command lin
 <p>In general, ConEmu installation is easy.
 Just unpack or install to any folder and run `ConEmu.exe`. </p>
 
-<p>For more information about installation options refer to <a href="{{page.docfolder}}/Installation.html">Installation</a> page. </p>
+<p>For more information about installation options refer to <a href="{{ site.mirror }}{{ page.docfolder }}/Installation.html">Installation</a> page. </p>
