--- a/_includes/menu_ru.html
+++ b/_includes/menu_ru.html
@@ -1,21 +1,21 @@
 			<div class="block">
 				<nav>
-				<div class="blocktitle">Site menu</div>
+				<div class="blocktitle">Меню сайта</div>
 				<div class="blockcontent">
 					<ul>
 					<!-- Menu starts -->
-					<li><a {% if page.url == '/ru/Downloads.html' %} class="MenuItemA" {% endif %} href="/ru/Downloads.html"><span>Зеркала загрузки</span></a></li>
-					<li><a {% if page.url == '/ru/TableOfContents.html' %} class="MenuItemA" {% endif %} href="/ru/TableOfContents.html"><span>Документация</span></a></li>
-					<li><a {% if page.url == '/en/Whats_New.html' %} class="MenuItemA" {% endif %} href="/en/Whats_New.html"><span>What's new</span></a></li>
-					<li><a {% if page.url == '/ru/ConEmuFAQ.html' %} class="MenuItemA" {% endif %} href="/ru/ConEmuFAQ.html"><span>ConEmu FAQ</span></a></li>
-					<li><a {% if page.url == '/ru/Screenshots.html' %} class="MenuItemA" {% endif %} href="/ru/Screenshots.html"><span>Скриншоты</span></a></li>
-					<li><a {% if page.url == '/ru/Settings.html' %} class="MenuItemA" {% endif %} href="/ru/Settings.html"><span>Настройка</span></a></li>
-					<li><a {% if page.url == '/en/AutoInstall.html' %} class="MenuItemA" {% endif %} href="/en/AutoInstall.html"><span>Автоматизация</span></a></li>
-					<li><a {% if page.url == '/donate.html' %} class="MenuItemA" {% endif %} href="/donate.html"><span>Поддержать</span></a></li>
-					<li><a {% if page.url == '/ru/AnsiEscapeCodes.html' %} class="MenuItemA" {% endif %} href="/ru/AnsiEscapeCodes.html"><span>ANSI</span></a></li>
-					<li><a {% if page.url == '/ru/Awards.html' %} class="MenuItemA" {% endif %} href="/ru/Awards.html"><span>Awards</span></a></li>
-					<li><a {% if page.url == '/ru/Delusions.html' %} class="MenuItemA" {% endif %} href="/ru/Delusions.html"><span>Заблуждения</span></a></li>
-					<li><a {% if page.url == '/ru/Source.html' %} class="MenuItemA" {% endif %} href="/ru/Source.html"><span>Исходный код</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/Downloads.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/Downloads.html"><span>Зеркала загрузки</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/TableOfContents.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/TableOfContents.html"><span>Документация</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/en/Whats_New.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/en/Whats_New.html"><span>What's new</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/ConEmuFAQ.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/ConEmuFAQ.html"><span>ConEmu FAQ</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/Screenshots.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/Screenshots.html"><span>Скриншоты</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/Settings.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/Settings.html"><span>Настройка</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/en/AutoInstall.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/en/AutoInstall.html"><span>Автоматизация</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror_ru }}/donate.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror_ru }}/donate.html"><span>Поддержать</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/AnsiEscapeCodes.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/AnsiEscapeCodes.html"><span>ANSI</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/Awards.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/Awards.html"><span>Awards</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/Delusions.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/Delusions.html"><span>Заблуждения</span></a></li>
+					<li><a {% if page.url == '{{ site.mirror }}/ru/Source.html' %} class="MenuItemA" {% endif %} href="{{ site.mirror }}/ru/Source.html"><span>Исходный код</span></a></li>
 					<!-- Menu ends -->
 					</ul>
 				</div>
