--- a/_includes/schema_search.html
+++ b/_includes/schema_search.html
@@ -2,10 +2,10 @@
 {
    "@context": "http://schema.org",
    "@type": "WebSite",
-   "url": "http://conemu.github.io/",
+   "url": "{{ site.url }}/",
    "potentialAction": {
      "@type": "SearchAction",
-     "target": "http://conemu.github.io/search.html?q={searchTerms}",
+     "target": "{{ site.url }}/search.html?q={searchTerms}",
      "query-input": "required name=searchTerms"
    }
 }
