--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,5 @@
 			<div class="block">
-				<div class="blocktitle">{% if page.docfolder != '/ru' %}Site search{% else %}Поиск по сайту{% endif %}</div>
+				<div class="blocktitle">{% if page.pagelang != 'ru' %}Site search{% else %}Поиск по сайту{% endif %}</div>
 				<div class="blockcontent">
 					<form method="GET" action="/search.html">
 						<div id="search-field-div"><input id="search-field" type="text" name="q" value=""></div>
