--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -5,8 +5,8 @@
   "name": "ConEmu-Maximus5",
   "alternateName": "ConEmu",
   "description": "Local terminal for Windows",
-  "url": "http://conemu.github.io",
-  "screenshot": "http://conemu.github.io/img/ConEmu-Maximus5.png",
+  "url": "{{ site.url }}",
+  "screenshot": "{{ site.url }}/img/ConEmu-Maximus5.png",
   "applicationCategory": "Terminal",
   "operatingSystem": "Windows",
   "requirements": "Windows 2000",
@@ -28,7 +28,7 @@
   "author": {
     "@type": "Person",
     "name": "Maximus5",
-    "image": "http://conemu.github.io/img/logo.png",
+    "image": "{{ site.url }}/img/logo.png",
     "sameAs": "https://twitter.com/ConEmuMaximus5"
   }
 }
