--- a/main.css
+++ b/main.css
@@ -233,12 +233,18 @@ table.no-border tr, table.no-border th, table.no-border td {
   content: '';
 }
 .container {
-  width: 100%;
-  float: left;
+  width: 734px;
+  float: right;
   overflow: hidden;
 }
+@media (max-width: 980px) {
+  .container {
+    width: 100%;
+    float: left;
+  }
+}
 .content {
-  padding: 0 0 0 210px;
+  padding: 0;
 }
 
 
@@ -246,14 +252,14 @@ table.no-border tr, table.no-border th, table.no-border td {
 -----------------------------------------------------------------------------*/
 .left-sidebar {
   float: left;
-  width: 250px;
-  margin-left: -100%;
-  position: relative;
+  clear: left;
+  padding: 0;
+  margin: 0;
 }
 
 @media (max-width: 980px) {
   .left-sidebar {
-    display: none;
+    width: 95%;
   }
   .content {
     padding-left: 0;
@@ -400,7 +406,7 @@ div.h-social a {
 /* Menu and Search
 -----------------------------------------------------------------------------*/
 .block {
-  margin: 10px 0px 20px 0px;
+  margin: 10px 0px 5px 0px;
   width: 180px;
   background-color: #fdf6e3;
   box-shadow: 0 0 4px 1px #93a1a1;
@@ -418,8 +424,13 @@ div.h-social a {
   font-variant: normal;
   font-weight: normal;
   line-height: normal;
-  position: relative;
   text-align: left;
+}
+
+@media (max-width: 980px) {
+  .block {
+    width: 100%;
+  }
 }
 
 .blocktitle {
@@ -458,6 +469,30 @@ div.h-social a {
 #search-field {
   max-width: 120px;
   height: 13pt;
+}
+@media (max-width: 980px) {
+  #footer-links {
+    margin-bottom: 1em;
+  }
+  #search-field-div {
+    width: 98%;
+    margin-bottom: 0.5em;
+  }
+  #search-field {
+    width: 100%;
+    max-width: 100%;
+  }
+  .blocktitle {
+    padding: 0;
+  }
+  .block ul {
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
+  }
+  #breadcrumbs {
+    padding-top: 0.7em;
+    padding-bottom: 0.3em;
+  }
 }
 #search-button {
   padding-left: 0.2em;
