Delimit left-sidebar's

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -94,6 +94,8 @@ This page was saved from: {{site.url}}{{page.url}}
 {% else %}
 {% include menu_en.html %}
 {% endif %}
+		</div>
+		<div class="left-sidebar">
 {% include search.html %}
 		</div><!-- .left-sidebar -->
 
