Remove unused comment

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -97,8 +97,7 @@ This page was saved from: {{site.url}}{{page.url}}
 		</div>
 		<div class="left-sidebar">
 {% include search.html %}
-		</div><!-- .left-sidebar -->
-
+		</div>
 	</div><!-- .middle-->
 
 </div><!-- .maincol -->
