Moving WhatsNew entries to _posts in progress

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -35,8 +35,14 @@ This page was saved from: {{site.url}}{{page.url}}
 <link rel="stylesheet" href="/searchresults.css">
 {% endif %}
 
+<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
+
+{% if page.category == "blog" and page.build %}
+<title>Build {{ page.build }}</title>
+{% else %}
 <title>{{page.title}}</title>
 {% if page.description != '' and page.description != nil %}<meta name="description" content="{{page.description}}">{% endif %}
+{% endif %}
 
 <meta property="og:url" content="{{page.canonical_url}}">
 <meta property="og:title" content="{{page.title}}">{% if page.description != '' and page.description != nil %}
@@ -67,9 +73,16 @@ This page was saved from: {{site.url}}{{page.url}}
 {% if page.force_header or (page.h1_title != nil and page.h1_title != '') %}
 	<h1>{% if page.h1_title %}{{ page.h1_title }}{% else %}{{ page.title }}{% endif %}</h1>{% if page.h1_content != '' and page.h1_content != nil %}
 	<p>{{ page.h1_content }}</p>{% endif %}
+{% elsif page.category == "blog" and page.build %}
+<h2 class="h0" id="Build_{{ page.build }}"><a href="{{ page.url }}"> Build {{ page.build }} </a></h2>
 {% endif %}
 
 {{ content }}
+
+{% if page.category == "blog" %}
+<!--end-->
+{% include blog_navigation.html %}
+{% endif %}
 
 </article>
 
