Add download button to build posts

--- a/_includes/blog_navigation.html
+++ b/_includes/blog_navigation.html
@@ -13,3 +13,7 @@ The oldest build
 {% break %}
 {% endif %}{% assign prev_post = post %}{% endfor %}
 </div>
+
+<div class="build_download">
+<a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="/img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
+</div>
