--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,9 @@
       <a class="h-gplus" target="_blank"
         href="https://plus.google.com/share?url=http%3A%2F%2F{{ site.site_name }}"
         title="Share ConEmu on Google+"></a>
+      <a class="h-github" target="_blank"
+        href="https://github.com/Maximus5/ConEmu"
+        title="Star and Fork on GitHub"></a>
     </div>
   </div>
   <div id="header-google">
