--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -126,23 +126,35 @@ This page was saved from: {{site.url}}{{page.url}}
 <!-- Auto select text in preformatted elements on click. -->
 <script>
 	if(document.addEventListener) document.addEventListener('DOMContentLoaded', function() {
-		function selectText() {
-			var sel = document.getSelection();
-			var rng = document.createRange();
+		function trimPreText(pre) {
+			var child = pre.querySelector('code');
+			var target = child ? child : pre;
 
-			sel.removeAllRanges();
-			rng.selectNodeContents(this);
-			sel.addRange(rng);
+			target.innerHTML = target.innerHTML.trim();
+		}
+
+		function injectPreTextSelectionHelper(pre) {
+			var control = document.createElement('div');
+
+			control.className = 'pre-text-selection-helper';
+
+			control.addEventListener('click', function() {
+				var selection = document.getSelection();
+				var range = document.createRange();
+
+				selection.removeAllRanges();
+				range.selectNodeContents(this.nextSibling);
+				selection.addRange(range);
+			});
+
+			snippets[i].parentNode.insertBefore(control, snippets[i]);
 		}
 
 		var snippets = document.querySelectorAll('.content pre');
 
 		for(var i = 0; i < snippets.length; ++i) {
-			var child = snippets[i].querySelector('code');
-			var target = child ? child : snippets[i];
-
-			target.innerHTML = target.innerHTML.trim();
-			snippets[i].addEventListener('click', selectText);
+			trimPreText(snippets[i]);
+			injectPreTextSelectionHelper(snippets[i]);
 		}
 	});
 </script>
