--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -64,7 +64,7 @@ and others. </p>
 	<li>normal, maximized and full screen graphical window modes; </li>
 	<li>window font anti-aliasing: standard, ClearType, disabled; </li>
 	<li>window fonts: family, height, width, bold, italic, etc.; </li>
-	<li>Chinese verions of Windows supported; </li>
+	<li>Chinese versions of Windows supported; </li>
 	<li>using <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=153" rel="nofollow">normal/bold/italic</a> fonts for different parts of the console simultaneously; </li>
 	<li>using 24-bit colors in Far Manager 3.x; </li>
 	<li><a href="{{ site.mirror }}{{ page.docfolder }}/AnsiEscapeCodes.html">ANSI X3.64 and Xterm 256 colors</a>; </li>
