--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -12,7 +12,7 @@ as one customizable GUI window with various features. </p>
 
 <p><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="/img/Downloads.png" alt="Download ConEmu" title="Download ConEmu"></img></a></p>
 
-<p>Take a look at <a href="http://dotnetsurfers.com/blog/2013/12/15/developer-tools-screencast-7-conemu/" rel="nofollow">screencast</a> about ConEmu. </p>
+<p>Take a look at <a href="Screencasts.html">screencasts</a> about ConEmu. </p>
 
 <p><img alt="ConEmu screenshot" src="/img/ConEmu-Maximus5.png"></p>
 
