--- a/_includes/index_ru.html
+++ b/_includes/index_ru.html
@@ -6,7 +6,7 @@
 			При запуске нового консольного приложения в ConEmu реальное окно консоли не отображается, а весь вывод и ввод перехватывается и перенаправляется в ConEmu. Основное назначение - совместное использование с <a href="http://en.wikipedia.org/wiki/FAR_Manager">Far Manager</a>. Но в ConEmu можно запускать и другие приложения: cmd, powershell, dn, putty, notepad, и т.п.</p>
 			<a href="http://www.fosshub.com/ConEmu.html"><img alt="Скачать ConEmu" src="/img/Downloads.png" title="Загрузить ConEmu" /></a>
 
-			<p><a href="Screencasts.html">Несколько видеороликов</a> - кратко о возможностях ConEmu.</p>
+			<p><a href="/ru/Screencasts.html">Несколько видеороликов</a> - кратко о возможностях ConEmu.</p>
 			&nbsp;
 
 			<p><img alt="ConEmu screenshot" src="/img/ConEmu-Maximus5.png"></p>
