Add remote-access to disclaimer

--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -21,7 +21,8 @@ as one customizable GUI window with various features. </p>
 
 <h2 id="Disclaimer"> Disclaimer </h2>
 
-<p>ConEmu is not a shell, so it does not provide &quot;shell features&quot; like tab-completion, command history and others.
+<p>ConEmu is not a shell, so it does not provide &quot;shell features&quot; like
+remote access, tab-completion, command history and others.
 ConEmu is advanced console window where you can run any shell of your choice.
 However, some of these features placed in <a href="{{ site.mirror }}{{ page.docfolder }}/RoadMap.html">RoadMap</a>.
 Also you may try <a href="{{ site.mirror }}{{ page.docfolder }}/ConEmuClink.html">Clink</a> for bash-style completion in cmd.exe
