--- a/_includes/blog_navigation.html
+++ b/_includes/blog_navigation.html
@@ -1,12 +1,12 @@
 <div class="post_navigation">{% for post in site.posts %}{% if post.url == page.url %}
 <span>{% if forloop.first == false %}
-<a href="{{ prev_post.url }}">{{prev_post.title}}</a>
+<a href="{{ prev_post.url }}">{% if prev_post.build %}Build {{ prev_post.build }}{% if prev_post.stage != '' and prev_post.stage %} ({{ prev_post.stage }}){% endif %}{% else %}{{prev_post.title}}{% endif %}</a>
 {% else %}
 The newest build
 {% endif %}</span>
-<span> | </span>{% comment %}<span> [ {{ forloop.index }} or {{ forloop.length }} ] </span>{% endcomment %}
+<span> | </span>{% comment %}<span> [ {{ forloop.index }} of {{ forloop.length }} ] </span>{% endcomment %}
 <span>{% if forloop.last == false %}
-<a href="{{ site.posts[forloop.index].url }}">{{site.posts[forloop.index].title}}</a>
+<a href="{{ site.posts[forloop.index].url }}">{% if site.posts[forloop.index].build %}Build {{ site.posts[forloop.index].build }}{% if site.posts[forloop.index].stage != '' and site.posts[forloop.index].stage %} ({{ site.posts[forloop.index].stage }}){% endif %}{% else %}{{site.posts[forloop.index].title}}{% endif %}</a>
 {% else %}
 The oldest build
 {% endif %}</span>
