Show page.url var as comment

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="{{page.pagelang}}">
+<!-- page.url='{{page.url}}' -->
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
