Correct conditions for default page

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
-{% if page.url == '/index.html' %}
+{% if page.url == '/' or page.url == '/index.html' %}
 <meta name='yandex-verification' content='5bb2b6c69957dc18' />
 <meta name="msvalidate.01" content="C3DA7A77EADF40C2ABF460748978E8F9" />
 <meta name='wmail-verification' content='ed799a87ae06320d92a0e7c9f31dec1d' />
