Canonic otherlang names

--- a/_includes/otherlang.html
+++ b/_includes/otherlang.html
@@ -2,8 +2,8 @@
 				<div class="blocktitle">{% if page.pagelang == 'ru' %}Смена языка{% else %}Switch language{% endif %}</div>
 				<div class="blockcontent">
 					<ul>
-					<li><a  href="{{ page.otherlang.eng }}"><span>English</span></a></li>
-					<li><a  href="{{ page.otherlang.rus }}"><span>Russian</span></a></li>
+					<li><a  href="{{ page.otherlang.en }}"><span>English</span></a></li>
+					<li><a  href="{{ page.otherlang.ru }}"><span>Russian</span></a></li>
 					</ul>
 				</div>
 			</div>
