Make banner background darker

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -69,7 +69,7 @@ window.addEventListener("load", function(){
 window.cookieconsent.initialise({
   "palette": {
     "popup": {
-      "background": "#073642",
+      "background": "#002b36",
       "text": "#eee8d5"
     },
     "button": {
