--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -98,8 +98,8 @@ window.cookieconsent.initialise({
 			<div class="content">
 
 <article>
-
-{% if page.force_header or (page.h1_title != nil and page.h1_title != '') %}
+{% if page.h1_title != nil and page.h1_title %}{% assign h1_title = page.h1_title %}{% else %}{% assign h1_title = '' %}{% endif %}
+{% if page.force_header or h1_title != '' %}
 	<h1>{% if page.h1_title %}{{ page.h1_title }}{% else %}{{ page.title }}{% endif %}</h1>{% if page.h1_content != '' and page.h1_content != nil %}
 	<p>{{ page.h1_content }}</p>{% endif %}
 {% elsif page.category == "blog" and page.build %}
