Use https for downloads page

--- a/_includes/blog_navigation.html
+++ b/_includes/blog_navigation.html
@@ -15,5 +15,5 @@ The oldest build
 </div>
 
 <div class="build_download">
-<a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="/img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
+<a href="{{ site.fosshub }}" rel="nofollow"><img src="/img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
 </div>
