--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -15,7 +15,7 @@
     "@type": "AggregateRating",
     "ratingValue": "5",
     "reviewCount": "27",
-    "url": "http://www.fosshub.com/ConEmu.html"
+    "url": "{{ site.fosshub }}"
   },
   "offers": {
     "@type": "Offer",
