--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -10,7 +10,7 @@ as one customizable GUI window with various features. </p>
 
 <p>Today, ConEmu can be used with any other console application or simple GUI tools (like PuTTY for example). ConEmu is an active project, open to <a href="{{ site.mirror }}{{ page.docfolder }}/Issues.html">suggestions</a>. </p>
 
-<p><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="/img/Downloads.png" alt="Download ConEmu" title="Download ConEmu"></img></a></p>
+<p><a href="{{ site.fosshub }}" rel="nofollow"><img src="/img/Downloads.png" alt="Download ConEmu" title="Download ConEmu"></img></a></p>
 
 <p>Take a look at <a href="/en/Screencasts.html">screencasts</a> about ConEmu. </p>
 
