--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -23,9 +23,9 @@ as one customizable GUI window with various features. </p>
 
 <p>ConEmu is not a shell, so it does not provide &quot;shell features&quot; like
 remote access, tab-completion, command history and others.
-ConEmu is advanced console window where you can run any shell of your choice.
-However, some of these features placed in <a href="{{ site.mirror }}{{ page.docfolder }}/RoadMap.html">RoadMap</a>.
-Also you may try <a href="{{ site.mirror }}{{ page.docfolder }}/ConEmuClink.html">Clink</a> for bash-style completion in cmd.exe
+ConEmu is an advanced console window where you can run any shell of your choice.
+However, some of these features have been placed in the <a href="{{ site.mirror }}{{ page.docfolder }}/RoadMap.html">RoadMap</a>.
+You may also try <a href="{{ site.mirror }}{{ page.docfolder }}/ConEmuClink.html">Clink</a> for bash-style completion in cmd.exe
 and <a href="http://github.com/lzybkr/PSReadLine">PSReadLine</a>
 or <a href="http://powertab.codeplex.com/">PowerTab</a> in powershell.exe. </p>
 
