--- a/main.css
+++ b/main.css
@@ -550,12 +550,13 @@ div.post_navigation, div.build_download {
 
 .block ul {
   margin: 0;
-  padding: 0;
-  list-style: none;
+  padding: 0 0 0 1.3em;
+  list-style-type: disk;
 }
 
 .block li {
-  line-height: 2.0em !important;
+/*line-height: 2.0em !important;*/
+  padding: 0.2em 0;
 }
 
 .block .MenuItemA {
