Upload project description

--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -2,17 +2,26 @@
 
 <h1 id="About"> About ConEmu </h1>
 
-<p>ConEmu-Maximus5 is a Windows console emulator with tabs,
-which presents multiple consoles and simple GUI applications
-as one customizable GUI window with various features. </p>
+<p>ConEmu-Maximus5 aims to be handy, comprehensive, fast and reliable terminal window
+where you may host any <a href="{{ site.mirror }}{{ page.docfolder }}/ConsoleApplication.html">console application</a>
+developed either for <a href="{{ site.mirror }}{{ page.docfolder }}/WinApi.html">WinAPI</a> (cmd, powershell, far)
+or <a href="{{ site.mirror }}{{ page.docfolder }}/CygwinMsysConnector.html">Unix PTY</a> (cygwin, msys, wsl bash). </p>
 
-<p>Initially, the program was created as a companion to <a href="http://www.farmanager.com/download.php?l=en" rel="nofollow">Far Manager</a> (<a href="http://en.wikipedia.org/wiki/FAR_Manager" rel="nofollow">FAR in Wikipedia</a>), my favorite shell replacement - file and archive management, command history and completion, powerful editor. </p>
+<p>As Windows console window enhancement (local terminal emulator), ConEmu presents multiple
+consoles and <a href="{{ site.mirror }}{{ page.docfolder }}/ChildGui.html">simple GUI applications</a> (like PuTTY for example)
+as one customizable tabbed <a href="https://en.wikipedia.org/wiki/Graphical_user_interface">GUI</a>
+window with various features. </p>
 
-<p>Today, ConEmu can be used with any other console application or simple GUI tools (like PuTTY for example). ConEmu is an active project, open to <a href="{{ site.mirror }}{{ page.docfolder }}/Issues.html">suggestions</a>. </p>
+<p>Moreover, due to deep integration, ConEmu is the best companion for
+<a href="http://www.farmanager.com/download.php?l=en" rel="nofollow">Far Manager</a>
+(<a href="http://en.wikipedia.org/wiki/FAR_Manager" rel="nofollow">FAR in Wikipedia</a>),
+my favorite <a href="{{ site.mirror }}{{ page.docfolder }}/TerminalVsShell.html">shell</a> replacement. </p>
+
+<p>ConEmu is an active project, open to <a href="{{ site.mirror }}{{ page.docfolder }}/Issues.html">suggestions</a>. </p>
 
 <p><a href="{{ site.fosshub }}" rel="nofollow"><img src="/img/Downloads.png" alt="Download ConEmu" title="Download ConEmu"></img></a></p>
 
-<p>Take a look at <a href="/en/Screencasts.html">screencasts</a> about ConEmu. </p>
+<p>Take a look at <a href="{{ site.mirror }}{{ page.docfolder }}/Screencasts.html">screencasts</a> about ConEmu. </p>
 
 <p><img alt="ConEmu screenshot" src="/img/ConEmu-Maximus5.png"></p>
 
@@ -31,15 +40,11 @@ or <a href="http://powertab.codeplex.com/">PowerTab</a> in powershell.exe. </p>
 
 <p>Or even choose bash or any other unix-like shell from
 <a href="https://www.cygwin.com/" rel="nofollow">cygwin</a>,
-<a href="https://msysgit.github.io/" rel="nofollow">msysgit</a>,
+<a href="https://gitforwindows.org/" rel="nofollow">git-for-windows</a>,
 <a href="https://sourceforge.net/projects/msys2/" rel="nofollow">msys2</a>,
 <a href="http://www.mingw.org/" rel="nofollow">mingw</a>
 and others. </p>
 
-
-<h2 id="History"> History </h2>
-
-<p>This project grew up from <a href="http://xs.nm.ru/" rel="nofollow">ConEmu by Zoin</a>. </p>
 
 
 <h2 id="Links"> Documentation and links </h2>
@@ -54,7 +59,8 @@ and others. </p>
 
 <h2 id="Description"> Description </h2>
 
-<p>ConEmu starts a console program in a hidden console window, and provides an alternative customizable GUI window with various features: </p>
+<p>ConEmu starts a console program in a <a href="{{ site.mirror }}{{ page.docfolder }}/RealConsole.html">hidden console window</a>,
+and provides an alternative customizable GUI window with various features: </p>
 
 <ul><li>smooth and friendly window resizing; </li>
 	<li>tabs for editors, viewers, panels and consoles; </li>
